# lain42

./: .env.example  .gitignore  README.md  docker-compose.yml  github-login-snapshot.txt  nginx.conf  pyproject.toml
.playwright-mcp/: page-2026-06-04T00-17-41-006Z.yml  page-2026-06-04T00-17-46-751Z.yml  page-2026-06-04T00-20-01-443Z.yml  page-2026-06-04T00-20-30-232Z.yml  page-2026-06-04T00-21-37-033Z.yml  page-2026-06-04T00-28-54-082Z.yml  page-2026-06-04T00-32-59-518Z.yml  page-2026-06-04T00-35-30-845Z.yml  page-2026-06-04T00-38-25-359Z.yml  page-2026-06-04T00-45-04-621Z.yml  page-2026-06-04T00-48-57-564Z.yml  page-2026-06-04T01-02-05-338Z.yml  page-2026-06-04T01-02-58-493Z.yml  page-2026-06-04T01-03-51-829Z.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: admin.py  auth.py  collections.py  deps.py  likes.py  mirrors.py  posts.py  search.py  upload.py  users.py
backend/app/grpc/: config_sync.py
backend/app/models/: __init__.py  collection.py  image.py  like.py  post.py  user.py
backend/app/schemas/: auth.py  collection.py  post.py
backend/app/services/: auth.py  cover_gen.py  deploy_static.py  mirror_fetcher.py  oauth.py  oss_upload.py  upload.py
client/: Cargo.toml  build.rs
client/src/: grpc.rs  main.rs  state.rs
client/src/ui/: mod.rs  settings.rs  sync.rs
docs/superpowers/plans/: 2026-06-04-lain42-implementation.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
proto/: config_sync.proto
(+17 files in other folders)
