[project]
name = "lain42-backend"
version = "0.1.0"
description = "Lain42 backend services"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.0",
    "Pillow>=11.0.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
