[package]
name = "lain-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lain"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[build-dependencies]
tonic-build = "0.12"
